# youtube_clone

./: .gitignore  config.py  pyproject.toml  requirements.txt  youtube.py
app/: __init__.py  models.py
app/auth/: views.py
app/main/: forms.py  views.py
app/templates/: form.html
src/app/: __init__.py
src/app/main/: views.py
src/app/templates/: base.html
