[project]
name = "app"
version = "0.0.1"
authors = [
    { name="Emmanuel Mwendwa", email="mwendwae054@gmail.com" },
]
description = "A basic clone app of youtube"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"HomePage" = "https://github.com/emmanuel-mwendwa/youtube_clone"